--- a/SchikulskiHandwriting-Regular.ufo/fontinfo.plist
+++ b/SchikulskiHandwriting-Regular.ufo/fontinfo.plist
@@ -3,13 +3,14 @@
 <plist version="1.0">
 <dict>
   <key>ascender</key>
-  <integer>800</integer>
+  <integer>1638</integer>
   <key>capHeight</key>
-  <integer>383</integer>
+  <integer>784</integer>
   <key>copyright</key>
-  <string></string>
+  <string>Copyright (c) 2018 Simen Schikulski.
+This Font Software is licensed under the SIL Open Font License, Version 1.1. This license is available with a FAQ at: http://scripts.sil.org/OFL</string>
   <key>descender</key>
-  <integer>-200</integer>
+  <integer>-410</integer>
   <key>familyName</key>
   <string>Schikulski Handwriting</string>
   <key>italicAngle</key>
@@ -22,23 +23,24 @@
   <key>note</key>
   <string></string>
   <key>openTypeHheaAscender</key>
-  <integer>800</integer>
+  <integer>1638</integer>
   <key>openTypeHheaDescender</key>
-  <integer>-200</integer>
+  <integer>-410</integer>
   <key>openTypeHheaLineGap</key>
-  <integer>90</integer>
+  <integer>0</integer>
   <key>openTypeNameDesigner</key>
   <string>Simen Schikulski</string>
   <key>openTypeNameDesignerURL</key>
   <string></string>
   <key>openTypeNameLicense</key>
-  <string></string>
+  <string>Copyright (c) 2018 Simen Schikulski.
+This Font Software is licensed under the SIL Open Font License, Version 1.1. This license is available with a FAQ at: http://scripts.sil.org/OFL</string>
   <key>openTypeNameLicenseURL</key>
-  <string></string>
+  <string>http://scripts.sil.org/OFL</string>
   <key>openTypeNameManufacturerURL</key>
   <string></string>
   <key>openTypeNameDescription</key>
-  <string>Schikulski Handwriting is based on the hardwriting of Simen Schikulski.</string>
+  <string></string>
   <key>openTypeNamePreferredFamilyName</key>
   <string>Schikulski Handwriting</string>
   <key>openTypeNamePreferredSubfamilyName</key>
@@ -52,38 +54,37 @@
   </array>
   <key>openTypeOS2Selection</key>
   <array>
-    <integer>7</integer>
   </array>
   <key>openTypeOS2StrikeoutPosition</key>
-  <integer>50</integer>
+  <integer>102</integer>
   <key>openTypeOS2StrikeoutSize</key>
-  <integer>50</integer>
+  <integer>102</integer>
   <key>openTypeOS2SubscriptXOffset</key>
   <integer>0</integer>
   <key>openTypeOS2SubscriptXSize</key>
-  <integer>650</integer>
+  <integer>1331</integer>
   <key>openTypeOS2SubscriptYOffset</key>
-  <integer>75</integer>
+  <integer>154</integer>
   <key>openTypeOS2SubscriptYSize</key>
-  <integer>600</integer>
+  <integer>1229</integer>
   <key>openTypeOS2SuperscriptXOffset</key>
   <integer>0</integer>
   <key>openTypeOS2SuperscriptXSize</key>
-  <integer>650</integer>
+  <integer>1331</integer>
   <key>openTypeOS2SuperscriptYOffset</key>
-  <integer>350</integer>
+  <integer>717</integer>
   <key>openTypeOS2SuperscriptYSize</key>
-  <integer>600</integer>
+  <integer>1229</integer>
   <key>openTypeOS2Type</key>
   <array>
     <integer>2</integer>
   </array>
   <key>openTypeOS2TypoAscender</key>
-  <integer>800</integer>
+  <integer>1638</integer>
   <key>openTypeOS2TypoDescender</key>
-  <integer>-200</integer>
+  <integer>-410</integer>
   <key>openTypeOS2TypoLineGap</key>
-  <integer>90</integer>
+  <integer>184</integer>
   <key>openTypeOS2UnicodeRanges</key>
   <array>
     <integer>0</integer>
@@ -96,9 +97,9 @@
   <key>openTypeOS2WidthClass</key>
   <integer>5</integer>
   <key>openTypeOS2WinAscent</key>
-  <integer>731</integer>
+  <integer>1497</integer>
   <key>openTypeOS2WinDescent</key>
-  <integer>178</integer>
+  <integer>365</integer>
   <key>postscriptBlueFuzz</key>
   <integer>1</integer>
   <key>postscriptBlueScale</key>
@@ -119,9 +120,9 @@
   <key>postscriptIsFixedPitch</key>
   <false/>
   <key>postscriptUnderlinePosition</key>
-  <integer>-125</integer>
+  <integer>-256</integer>
   <key>postscriptUnderlineThickness</key>
-  <integer>50</integer>
+  <integer>102</integer>
   <key>postscriptWeightName</key>
   <string>Regular</string>
   <key>styleMapFamilyName</key>
@@ -133,12 +134,12 @@
   <key>trademark</key>
   <string></string>
   <key>unitsPerEm</key>
-  <integer>1000</integer>
+  <integer>2048</integer>
   <key>versionMajor</key>
   <integer>0</integer>
   <key>versionMinor</key>
   <integer>100</integer>
   <key>xHeight</key>
-  <integer>499</integer>
+  <integer>1024</integer>
 </dict>
 </plist>
