--- a/SchikulskiHandwriting-Regular.ufo/groups.plist
+++ b/SchikulskiHandwriting-Regular.ufo/groups.plist
@@ -2,11 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-  <key>public.kern1.A</key>
-  <array>
-    <string>A</string>
-    <string>Aring</string>
-  </array>
   <key>public.kern1.B</key>
   <array>
     <string>B</string>
@@ -14,14 +9,14 @@
     <string>E</string>
     <string>F</string>
     <string>H</string>
+    <string>I</string>
     <string>K</string>
     <string>L</string>
     <string>M</string>
     <string>N</string>
-    <string>P</string>
-    <string>R</string>
     <string>U</string>
     <string>b</string>
+    <string>d</string>
     <string>h</string>
     <string>i</string>
     <string>k</string>
@@ -30,12 +25,66 @@
     <string>n</string>
     <string>p</string>
     <string>r</string>
-    <string>u</string>
   </array>
-  <key>public.kern2.A</key>
+  <key>public.kern1.G</key>
   <array>
-    <string>A</string>
-    <string>Aring</string>
+    <string>zero</string>
+    <string>six</string>
+    <string>nine</string>
+    <string>G</string>
+    <string>O</string>
+    <string>Q</string>
+    <string>Oslash</string>
+  </array>
+  <key>public.kern1.a</key>
+  <array>
+    <string>a</string>
+    <string>g</string>
+    <string>o</string>
+    <string>q</string>
+  </array>
+  <key>public.kern2.</key>
+  <array>
+  </array>
+  <key>public.kern2.H</key>
+  <array>
+    <string>H</string>
+    <string>I</string>
+    <string>J</string>
+    <string>M</string>
+    <string>N</string>
+  </array>
+  <key>public.kern2.a</key>
+  <array>
+    <string>a</string>
+    <string>b</string>
+    <string>c</string>
+    <string>d</string>
+    <string>e</string>
+    <string>f</string>
+    <string>g</string>
+    <string>h</string>
+    <string>i</string>
+    <string>j</string>
+    <string>k</string>
+    <string>l</string>
+    <string>m</string>
+    <string>n</string>
+    <string>o</string>
+    <string>p</string>
+    <string>q</string>
+    <string>r</string>
+    <string>s</string>
+    <string>t</string>
+    <string>u</string>
+    <string>v</string>
+    <string>w</string>
+    <string>x</string>
+    <string>y</string>
+    <string>z</string>
+    <string>aring</string>
+    <string>ae</string>
+    <string>oslash</string>
   </array>
 </dict>
 </plist>
